search bar and scrollspy merg

--- a/dashBoard/calander-availability.html
+++ b/dashBoard/calander-availability.html
@@ -8,7 +8,7 @@
 <body>
 
       <div class="right-l-d">
-        
+      <div id="Availability" class="list-group-item-content">
       <p class="personalinfor-header">Availability</p>
       <p class="personalinfor-header-1 mb-0">Status</p>
       <p class="details-header-font-4">Show or hide your listing</p>
@@ -31,7 +31,9 @@
         <div>
         </div>
       </div>
+    </div>
       <hr>
+      <div id="Calendar-Sync" class="list-group-item-content">
       <div class="Calendar-sync">
         <p class="personalinfor-header-1">Calendar sync</p>
         <div class="clndr-stnc-main">
@@ -63,6 +65,7 @@
       <br>
       <br>
       <p class="ph-font-3">Import/Export Calendar</p>
+      </div>
       </div>
    </div>
 
