--- a/dashBoard/rulesAndPolices.html
+++ b/dashBoard/rulesAndPolices.html
@@ -4,17 +4,6 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Crew dogs</title>
-  <link href="../css/bootstrap.css" rel="stylesheet">
-  <link href="../css/style.css" rel="stylesheet">
-  <link href="../css/menu.css" rel="stylesheet">
-  <link href="../css/slick-slider.css" rel="stylesheet">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link rel="stylesheet" href="../css/s-custom.css">
-  <link rel="stylesheet" href="../css/fonts.css">
-  <link rel="stylesheet" href="../css/dashboard.css">
-  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
  <style>
    .button-001 {
       display: flex;
@@ -43,79 +32,10 @@
 
 <body>
 
-  <div id="dashboardHeader" style="z-index: 1; border-bottom:1px solid rgba(0, 0, 0, 0.085) ;"></div>
-  <br>
-  <div class="container" style="max-width: 1550px;">
-    <div class="d-flex justify-content-between align-items-start container">
-      <div class="">
-        <p class=" dashboard-font-5">A small room in denver</p>
-        <div class="mb-0 pi-font-4 d-flex gap-1 align-items-center">
-          Change listing
-          <svg xmlns="http://www.w3.org/2000/svg" width="10" height="6" viewBox="0 0 10 6" fill="none">
-            <path d="M9 1L5 5L1 1" stroke="#4B4B4D" stroke-linecap="round" stroke-linejoin="round" />
-          </svg>
-        </div>
-      </div>
-      <div class="d-flex gap-2 align-items-center">
-        <div><span class="bluedot"></span>Available</div>
-
-        <div class="d-flex align-items-center justify-content-center border"
-          style="border-radius: 50%; width: 40px; height: 40px; position: relative;">
-          <span class="green-dot"></span>
-          <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" viewBox="0 0 12 12" fill="none">
-            <path
-              d="M10.6666 3.83073C10.9427 3.83073 11.1666 3.60687 11.1666 3.33073C11.1666 3.05459 10.9427 2.83073 10.6666 2.83073V3.83073ZM2.52627 1.59596L2.1743 1.24083L2.1743 1.24083L2.52627 1.59596ZM3.81849 1.01919C4.01462 0.824801 4.01604 0.508221 3.82165 0.31209C3.62726 0.115959 3.31068 0.114546 3.11455 0.308935L3.81849 1.01919ZM9.60707 10.3988L9.95904 10.754L9.95904 10.754L9.60707 10.3988ZM8.31484 10.9756C8.11871 11.17 8.1173 11.4866 8.31169 11.6827C8.50608 11.8788 8.82266 11.8802 9.01879 11.6859L8.31484 10.9756ZM10.7895 8.83117L11.2855 8.89439L11.2855 8.89439L10.7895 8.83117ZM1.33325 8.16406C1.05711 8.16406 0.833253 8.38792 0.833253 8.66406C0.833253 8.9402 1.05711 9.16406 1.33325 9.16406V8.16406ZM10.7934 8.7974L11.2909 8.84784L10.7934 8.7974ZM1.50081 3.83073H10.6666V2.83073H1.50081V3.83073ZM2.87824 1.95109L3.81849 1.01919L3.11455 0.308935L2.1743 1.24083L2.87824 1.95109ZM2.1743 1.24083C1.80773 1.60414 1.50226 1.90583 1.28565 2.17556C1.0627 2.45317 0.893115 2.74494 0.847807 3.1004L1.83978 3.22684C1.8522 3.1294 1.89894 3.00892 2.06534 2.80172C2.23807 2.58664 2.49498 2.33095 2.87824 1.95109L2.1743 1.24083ZM9.25509 10.0437L8.31484 10.9756L9.01879 11.6859L9.95904 10.754L9.25509 10.0437ZM9.95904 10.754C10.3256 10.3907 10.6311 10.089 10.8477 9.81923C11.0706 9.54162 11.2402 9.24986 11.2855 8.89439L10.2936 8.76795C10.2811 8.86539 10.2344 8.98588 10.068 9.19307C9.89526 9.40815 9.63836 9.66384 9.25509 10.0437L9.95904 10.754ZM10.296 8.74695C10.2952 8.75396 10.2944 8.76096 10.2936 8.76795L11.2855 8.89439C11.2875 8.87889 11.2893 8.86337 11.2909 8.84784L10.296 8.74695ZM10.6666 8.16406H1.33325V9.16406H10.6666V8.16406ZM11.2909 8.84784C11.3316 8.44595 11.0012 8.16406 10.6666 8.16406L10.6666 9.16406C10.4795 9.16406 10.2701 9.00207 10.296 8.74695L11.2909 8.84784ZM1.50081 2.83073C1.66431 2.83073 1.87167 2.97669 1.83978 3.22684L0.847807 3.1004C0.792522 3.53414 1.15223 3.83073 1.50081 3.83073V2.83073Z"
-              fill="#444444" />
-          </svg>
-        </div>
-
-        <button class="button-001">Preview listing</button>
-      </div>
-    </div>
-  </div>
-  
-  <div class="dashboard-main container">
-    <div class="dashboard-right">
-      <div id="mainList">
-        <div id="page1" data-page="page1" class="dashBoard-page-nav-active">
-          <p class="dashboard-sidenav-font dashBoard-page-nav">Listing details</p>
-          <div id="ListingDetails" class="list-group nav-bar-listing-details popup-font-3">
-            <a class="list-group-item list-group-item-action" href="#Photos">Photos</a>
-            <a class="list-group-item list-group-item-action" href="#Property-information">Property information</a>
-            <a class="list-group-item list-group-item-action" href="#Address">Address</a>
-            <a class="list-group-item list-group-item-action" href="#Amenities">Amenities</a>
-            <a class="list-group-item list-group-item-action" href="#Stay-types">Stay types</a>
-          </div>
-        </div>
-        <div id="page2" data-page="page2">
-          <p class="dashboard-sidenav-font dashBoard-page-nav">Pricing</p>
-          <div id="PricingApi" class="list-group nav-bar-listing-details popup-font-3">
-            <a class="list-group-item list-group-item-action" href="#Standard-rates">Standard rates</a>
-            <a class="list-group-item list-group-item-action" href="#Seasonal-rates">Seasonal rates</a>
-            <a class="list-group-item list-group-item-action" href="#Official-travel rates">Official travel rates</a>
-            <a class="list-group-item list-group-item-action" href="#Discounts">Discounts</a>
-            <a class="list-group-item list-group-item-action" href="#Taxes-and-fees">Taxes and fees</a>
-          </div>
-        </div>
-        <div id="page3" data-page="page3">
-           <p class="dashboard-sidenav-font dashBoard-page-nav" >Rules and Policies</p>
-          <div id="Rules-and-Policies" class="list-group nav-bar-listing-details popup-font-3">
-            <a class="list-group-item list-group-item-action" href="#Standard-rates">House Rules</a>
-            <a class="list-group-item list-group-item-action" href="#Seasonal-rates">Cancellation policy</a>
-          </div>
-        </div>
-        <div id="page4" data-page="page4">
-          <p class="dashboard-sidenav-font dashBoard-page-nav" >Calendar and availability</p>
-          <div id="Calendar-and-availability" class="list-group nav-bar-listing-details popup-font-3">
-            <a class="list-group-item list-group-item-action" href="#Standard-rates">Availability</a>
-            <a class="list-group-item list-group-item-action" href="#Seasonal-rates">Calendar Sync</a>
-          </div>
-        </div>
-      </div>
-    </div>
 
     <div class="dashboard-left">
       <div class="right-l-d">
+        <div id="House-Rules" class="list-group-item-content">
         <div class="d-flex justify-content-between">
           <p class="personalinfor-header">House Rules</p>
         </div>
@@ -291,8 +211,10 @@
           </div>
           <input type="text" class="form-control input-fonts" placeholder="Add rule here">
         </div>
+      </div>
+
         <hr>
-      
+      <div id="Cancellation-polic" class="list-group-item-content">
         <p class="dashboard-font-15" style="line-height: 32px; font-size: 18px;">Cancellation Policy</p>
         <div class="d-flex gap-2">
           <p class="dashboard-font-16">Short-term: <span> Flexible</span></p>
@@ -366,13 +288,9 @@
              <button class="save-2" >save</button>
           </div>
         </div>
-      
+        </div>
       </div>      
   </div>
-  </div>
-
-<script src="../js/bootstrap.bundle.min.js"></script>
-<script src="../js/jquery-3.7.1.js"></script>
-<script src="dashboard.js"></script>
+ 
 </body>
 </html>
