--- a/demo.html
+++ b/demo.html
@@ -1,6 +1,5 @@
 <!doctype html>
 <html lang="en">
-
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -21,6 +20,14 @@
         rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <style>
+        #search-bar{
+            display: none;
+        }
+        @media (max-width:700px) {
+            #search-bar{
+                display: block;
+            }
+        }
     </style>
 </head>
 
