--- a/searchbarmain.html
+++ b/searchbarmain.html
@@ -6,10 +6,46 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Crew dogs</title>
     <link rel="stylesheet" href="css/calander.css">
+    <style>
+        .choose-a-date {
+            display: flex;
+            align-self: center;
+            justify-content: space-between;
+            min-width: 200px;
+        }
+
+        .show .searchbar-default-text {
+            display: none;
+        }
+
+        .searchbar-start-end-date {
+            display: none;
+            align-items: center;
+            gap: 4px;
+        }
+
+        .show .searchbar-start-end-date {
+            display: flex;
+        }
+
+        .searchbar-date {
+            display: none;
+            gap: 5px;
+        }
+
+        .show::after {
+            display: none;
+        }
+
+        .line {
+            width: 1px;
+            height: 24px;
+            background: #D9D9D9;
+        }
+    </style>
 </head>
 
 <body>
-
     <div class="d-flex mb-4" style=" min-height: 100px; height: fit-content;">
         <div id="search-box-m" class="search-box d-flex " style="z-index: 101;">
 
@@ -27,14 +63,30 @@
             </div>
 
             <div class="dropdown d-flex align-items-center justify-content-center">
-                <a id="guest-dropdown" class="drop-sticky hero-down dropdown-toggle" href="#" role="button"
-                    data-bs-toggle="dropdown" aria-expanded="false" aria-controls="guest-menu">
-                    <span> Choose a</span> date
+                <a id="guest-dropdown" class="choose-a-date drop-sticky hero-down dropdown-toggle" href="#"
+                    role="button" data-bs-toggle="dropdown" aria-expanded="false" aria-controls="guest-menu">
+
+                    <div class="searchbar-default-text">
+                        <span> Choose a</span>date
+                    </div>
+
+                    <div class="searchbar-start-end-date">
+                        <p class="mb-0">Start date</p>
+                        <div class="searchbar-start-date searchbar-date ">
+                            <p class="mb-0" style="font-weight: 700; color: #444;"> jan 10</p>
+                            <img src="img/Close Circle.svg" alt="">
+                        </div>
+                        <div class="line"></div>
+                        <p class="mb-0">end date</p>
+                        <div class="searchbar-end-date searchbar-date ">
+                            <p class="mb-0" style="font-weight: 700; color: #444;"> jan 15</p>
+                            <img src="img/Close Circle.svg" alt="">
+                        </div>
+                    </div>
                 </a>
 
-                <ul class="dropdown-menu p-0" style="overflow: hidden; margin: auto;">
-                    <li class="dropdown-item calander-main p-2"
-                        style=" background-color: #fff ;">
+                <ul class="dropdown-menu dropdown-menu-position  p-0" style="overflow: hidden; margin: auto; min-width: 850px;">
+                    <li class="dropdown-item calander-main p-2 pt-4" style=" background-color: #fff ;">
                         <div class="w-100 d-flex flex-column" style="z-index: 999  !important;">
 
                             <div>
@@ -52,7 +104,6 @@
                             </div>
 
                             <div class="">
-
                                 <div class="days-calander pt-3 w-100 m-auto content active" id="content1"
                                     style="max-width: 744px;">
                                     <div class="m-auto">
