--- a/searchbarmain.html
+++ b/searchbarmain.html
@@ -34,6 +34,9 @@
         }
 
         .show::after {
+            opacity: 0;
+        }
+         .show.choose-a-date::after {
             display: none;
         }
 
