--- a/searchbarmain.html
+++ b/searchbarmain.html
@@ -13,6 +13,15 @@
             justify-content: space-between;
             min-width: 200px;
         }
+        .choose-a-date::after{
+            margin: auto;
+        }
+        .show::after {
+            opacity: 0;
+        }
+         .show.choose-a-date::after {
+            display: none;
+        }
 
         .show .searchbar-default-text {
             display: none;
@@ -31,13 +40,6 @@
         .searchbar-date {
             display: none;
             gap: 5px;
-        }
-
-        .show::after {
-            opacity: 0;
-        }
-         .show.choose-a-date::after {
-            display: none;
         }
 
         .line {
