--- a/searchbarmain.html
+++ b/searchbarmain.html
@@ -89,6 +89,7 @@
         
         .dropdown-search-input {
             outline: none;
+            border: none;
             display: none;
         }
         .show .Select-a-destination p{
