--- a/searchbarmain.html
+++ b/searchbarmain.html
@@ -149,12 +149,21 @@
             align-items: end;
             width: 100%;
         }
+        .search-box-m{
+            z-index: 111;
+        }
+        @media (max-width:700px) {
+            .search-box-m{
+                z-index: 1 !important;
+            }
+        }
+
     </style>
 </head>
 
 <body>
     <div class="d-flex mb-4" style=" min-height: 100px; height: fit-content;">
-        <div id="search-box-m" class="search-box d-flex " style="z-index: 101;">
+        <div id="search-box-m" class="search-box d-flex " >
 
             <div class="dropdown d-flex align-items-center justify-content-center">
                 <a id="Select-a-destination" class="Select-a-destination drop-sticky hero-down dropdown-toggle" href="#"
@@ -215,7 +224,7 @@
                 </a>
 
                 <ul class="dropdown-menu dropdown-menu-position  p-0"
-                    style="overflow: hidden; margin: auto; min-width: 850px;">
+                    style="overflow: hidden; margin: auto; min-width: 850px; border-radius: 1rem;">
                     <li class="dropdown-item calander-main p-2 pt-4" style=" background-color: #fff ;">
                         <div class="w-100 d-flex flex-column" style="z-index: 999  !important;">
 
