--- a/listing/donation.html
+++ b/listing/donation.html
@@ -43,17 +43,46 @@
           </p>
           <div class="search-box">
             <p class="listing-font-3">Select your military charity</p>
-            <div>
-              <input type="text" class="form-select" placeholder="Search" style="--bs-form-select-bg-img: none;">
-                 <img src="../img/Search 2.svg" alt="">
+            <div class="listing-search-main">
+              <div class="search-box-input">
+                <input type="text" class="form-select" placeholder="Search" style="--bs-form-select-bg-img: none;">
+                <img src="../img/Search 2.svg" alt="">
+              </div>
+            <!-- listing search suggestions -->
+             <!--  <div class="listing-search-suggestions">
+                  <div class="listing-suggested-location">
+                    <div class="search-location-icon" style="position: relative;"> <img src="../img/Location.svg" alt=""></div>
+                    <p class="pi-font-6-1 mb-0">Wounded Warriors <span class="offer-header-font-4 "> Project</span></p>
+                  </div>
+                  <div class="listing-suggested-location">
+                    <div class="search-location-icon" style="position: relative;"> <img src="../img/Location.svg" alt=""></div>
+                    <p class="pi-font-6-1 mb-0">Wounded Warriors <span class="offer-header-font-4 ">Foundation</span></p>
+                  </div>
+                  <div class="listing-suggested-location">
+                    <div class="search-location-icon" style="position: relative;"> <img src="../img/Location.svg" alt=""></div>
+                    <p class="pi-font-6-1 mb-0">Wounded Warriors <span class="offer-header-font-4 ">International</span></p>
+                  </div>
+              </div> -->
+
             </div>
           </div>
-          <div class="mission-display">
+          <!-- mission display -->
+         <div class="mission-display">
             <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 30 30" fill="none">
               <path d="M13.9993 24.3307C13.9993 24.883 14.4471 25.3307 14.9993 25.3307C15.5516 25.3307 15.9993 24.883 15.9993 24.3307H13.9993ZM15.9993 5.66406C15.9993 5.11178 15.5516 4.66406 14.9993 4.66406C14.4471 4.66406 13.9993 5.11178 13.9993 5.66406H15.9993ZM18.2497 10.2664C18.5258 10.7447 19.1374 10.9086 19.6157 10.6324C20.094 10.3563 20.2579 9.74469 19.9817 9.2664L18.2497 10.2664ZM18.6149 8.89907L17.7489 9.39907L17.7489 9.39907L18.6149 8.89907ZM13.8394 14.5707L14.1847 13.6322L14.1846 13.6322L13.8394 14.5707ZM16.1596 15.4241L16.5048 14.4856L16.5047 14.4856L16.1596 15.4241ZM11.3841 21.0957L10.518 21.5957L10.518 21.5957L11.3841 21.0957ZM11.7493 19.7284C11.4732 19.2501 10.8616 19.0862 10.3833 19.3624C9.90502 19.6385 9.74114 20.2501 10.0173 20.7284L11.7493 19.7284ZM16.7699 22.5389L16.2699 21.6728L16.7699 22.5389ZM13.2291 7.45595L13.7291 8.32197L13.7291 8.32197L13.2291 7.45595ZM27.3327 14.9974C27.3327 21.8089 21.8109 27.3307 14.9993 27.3307V29.3307C22.9154 29.3307 29.3327 22.9135 29.3327 14.9974H27.3327ZM14.9993 27.3307C8.18784 27.3307 2.66602 21.8089 2.66602 14.9974H0.666016C0.666016 22.9135 7.08327 29.3307 14.9993 29.3307V27.3307ZM2.66602 14.9974C2.66602 8.18588 8.18784 2.66406 14.9993 2.66406V0.664062C7.08327 0.664062 0.666016 7.08131 0.666016 14.9974H2.66602ZM14.9993 2.66406C21.8109 2.66406 27.3327 8.18588 27.3327 14.9974H29.3327C29.3327 7.08131 22.9154 0.664062 14.9993 0.664062V2.66406ZM19.9817 9.2664L19.481 8.39907L17.7489 9.39907L18.2497 10.2664L19.9817 9.2664ZM12.2501 20.5957L11.7493 19.7284L10.0173 20.7284L10.518 21.5957L12.2501 20.5957ZM15.8144 16.3626C18.1559 17.2239 18.4305 20.4254 16.2699 21.6728L17.2699 23.4049C20.899 21.3096 20.4378 15.9322 16.5048 14.4856L15.8144 16.3626ZM12.7291 6.58992C9.09998 8.68522 9.56125 14.0626 13.4942 15.5092L14.1846 13.6322C11.8431 12.7709 11.5685 9.56943 13.7291 8.32197L12.7291 6.58992ZM15.9993 24.3307V23.0628H13.9993V24.3307H15.9993ZM15.9993 23.0628V14.9974H13.9993V23.0628H15.9993ZM16.2699 21.6728C15.8504 21.915 15.3988 22.0415 14.9492 22.064L15.0495 24.0615C15.8084 24.0235 16.5694 23.8093 17.2699 23.4049L16.2699 21.6728ZM14.9492 22.064C13.8787 22.1178 12.8207 21.584 12.2501 20.5957L10.518 21.5957C11.4783 23.259 13.2587 24.1514 15.0495 24.0615L14.9492 22.064ZM13.4942 15.5092L14.6541 15.9359L15.3446 14.0589L14.1847 13.6322L13.4942 15.5092ZM14.6542 15.9359L15.8144 16.3626L16.5047 14.4856L15.3445 14.0589L14.6542 15.9359ZM15.9993 14.9974L15.9993 6.93203L13.9993 6.93203L13.9993 14.9974L15.9993 14.9974ZM15.9993 6.93203V5.66406H13.9993V6.93203H15.9993ZM19.481 8.39907C18.5206 6.73565 16.74 5.84329 14.9492 5.93329L15.0495 7.93077C16.1202 7.87696 17.1783 8.41071 17.7489 9.39907L19.481 8.39907ZM14.9492 5.93329C14.1904 5.97142 13.4295 6.18559 12.7291 6.58992L13.7291 8.32197C14.1485 8.07983 14.6 7.95336 15.0495 7.93077L14.9492 5.93329Z" fill="#ACACB0"/>
             </svg>
                 <p class="pi-font-4 t-c" >The mission of your organization will appear here</p>
           </div>
+
+           <!-- mission display-text filled -->
+          <div class="mission-display-text-filled">
+            <p class="listing-font-4">Wounded Warriors Project</p>
+            <p class="pi-font-6">The mission of Wounded Warrior Project is to honor and empower wounded warriors. Our purpose is: to raise awareness and enlist the public's aid for the needs of severely injured service men and women; to help severely injured service members aid and assist each other; and to provide unique, direct programs and services to meet the needs of severely injured service members.</p>
+          </div>
+
+
+
+
           <div class="w-100">
             <p class="listing-font-3"> <b>Optional:</b>  Add an amount per payout to donate</p>
             <div class="search-box search-box-2">
