--- a/listing/afterImport.html
+++ b/listing/afterImport.html
@@ -33,6 +33,9 @@
           <img src="../img/arrow_back.svg" alt="">
         </a>
       </header>
+      <div class="desktop-back-button">
+        <img src="../img/Left 1.svg" alt="">
+    </div>
 
       <div class="afterimport">
         <p class="your-payout-font">Airbnb import details</p>
