--- a/listing/discount.html
+++ b/listing/discount.html
@@ -33,21 +33,24 @@
           <img src="../img/arrow_back.svg" alt="">
         </a>
       </header>
+      <div class="desktop-back-button">
+        <img src="../img/Left 1.svg" alt="">
+      </div>
 
       <div class="Military-discount">
         <p class="your-payout-font text-center">Add damage protection</p>
-        <div class="learm-more-discount">  
-        <div>
-          <p class="pi-font-3">Crewdogs is a military only community where service fees are discounted. Apply your
-            discount below to pass the savings to your guests.</p>
-          <!-- Button trigger modal -->
-          <a  href="./learnmore.html" class="pi-font-3 more-info-btn" >
-            learn more
-          </a>
-        </div>
-        <div class="form-check form-switch">
-          <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
-        </div>
+        <div class="learm-more-discount">
+          <div>
+            <p class="pi-font-3">Crewdogs is a military only community where service fees are discounted. Apply your
+              discount below to pass the savings to your guests.</p>
+            <!-- Button trigger modal -->
+            <a href="./learnmore.html" class="pi-font-3 more-info-btn">
+              learn more
+            </a>
+          </div>
+          <div class="form-check form-switch">
+            <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
+          </div>
         </div>
         <button class="continue-button button-blue">continue</button>
       </div>
