--- a/listing/militarydiscouunt.html
+++ b/listing/militarydiscouunt.html
@@ -1,6 +1,5 @@
 <!doctype html>
 <html lang="en">
-
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -33,6 +32,9 @@
           <img src="../img/arrow_back.svg" alt="">
         </a>
       </header>
+      <div class="desktop-back-button">
+        <img src="../img/Left 1.svg" alt="">
+      </div>
 
       <div class="Military-discount">
         <p class="your-payout-font text-center">Military discount</p>
@@ -98,10 +100,13 @@
         <div class="modal-body">
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
           <p class="pi-font-7 pt-4 mb-2">The military discount</p>
-          <p class="pi-font-4">Your military discount is applied to the total nightly or monthly rate, not including fees or deposits. It is stacked on top of any length of stay discounts you apply (added on next page). We display this prominently on your listing for guests to see. </p>
+          <p class="pi-font-4">Your military discount is applied to the total nightly or monthly rate, not including
+            fees or deposits. It is stacked on top of any length of stay discounts you apply (added on next page). We
+            display this prominently on your listing for guests to see. </p>
           <div class="divider mb-3"></div>
           <p class="dm-small-4 mb-2">When the military discount is not applied:</p>
-          <p class="pi-font-4">Official gov’t travel stays where your rates have been reduced to reflect per diem amounts (if opted in for official gov’t hosting).</p>
+          <p class="pi-font-4">Official gov’t travel stays where your rates have been reduced to reflect per diem
+            amounts (if opted in for official gov’t hosting).</p>
         </div>
       </div>
     </div>
