--- a/details.html
+++ b/details.html
@@ -136,8 +136,9 @@
           <hr>
 
           <div class="listing-group">
-            <div class="d-flex gap-2">
-              <div class="avatar  ">
+            <!-- <div class="host-info d-flex gap-2 "> -->
+            <div class="host-info  ">
+              <div class="avatar">
                 <img src="img/avatar.png" style="width: 48px; height: 48px;" alt="">
               </div>
               <div class="reviewer">
