--- a/listing/addlisting.html
+++ b/listing/addlisting.html
@@ -35,7 +35,7 @@
                       </div>
                     </div>
                     
-                    <div class="import-create-listing">
+                    <div class="import-create-listing active">
                       <di>
                         <p class="dashboard-font-11 mb-0">Create a listing</p>
                         <p class="dashboard-font-12 mb-0 m-n">Add Rooms or an Entire Place from scratch</p>
@@ -44,7 +44,7 @@
                         <img src="../img/Add.svg" width="32px" height="32px" alt="">
                       </div>
                     </div>
-               <button class="continue-button">continue</button>     
+               <button class="continue-button active">Continue</button>     
             </div>
    </div>
 
