--- a/listings.html
+++ b/listings.html
@@ -237,7 +237,7 @@
   <section class="pb-5" style="padding-top: 1rem;">
     <div class="container-xxl container-sm px-m-none">
 
-      <div class="container filter-menu-main d-flex justify-content-between align-items-center"
+      <div class="container mb-3 filter-menu-main d-flex justify-content-between align-items-center"
         style="max-width: 1450px;">
         <div class="over-x-scroll">
           <div class="filter-area d-flex align-items-center">
