--- a/listing/nav.html
+++ b/listing/nav.html
@@ -14,5 +14,9 @@
   <a href="learnmore.html">learnmore.html</a>
   <a href="listingroom.html">listingroom.html</a>
   <a href="militarydiscouunt.html">militarydiscouunt.html</a>
+  <a href="pricing.html">pricing.html</a>
+  <a href="Amenites.html">Amenites.html</a>
+  <a href="availability.html">availability.html</a>
+  <a href="location.html">location.html</a>
 </body>
 </html>
