--- a/listing/nav.html
+++ b/listing/nav.html
@@ -4,6 +4,18 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <style>
+    a{
+      display: block;
+      padding: .5rem;
+      background-color: #0D99FF;
+      color: white;
+      border-radius: 1rem;
+      width: fit-content;
+      margin-top: .5rem;
+       text-decoration: none;
+    }
+  </style>
 </head>
 <body>
   <a href="addlisting.html">addlisting.html</a>
