--- a/listing/Amenites.html
+++ b/listing/Amenites.html
@@ -116,7 +116,7 @@
 
         </div>
        </div>
-        <button class="continue-button">continue</button>
+        <button class="continue-button active">continue</button>
       </div>
     </div>
 
