--- a/listing/addlisting.html
+++ b/listing/addlisting.html
@@ -78,7 +78,7 @@
        
        <h1>Frequently Asked Questions</h1>
 
-       <div class="accordion accordion-custom mb-5" style="max-width: 1038px; width: 100%;" id="accordionExample">
+       <div class="accordion accordion-custom px-2 mb-5" style="max-width: 1038px; width: 100%;" id="accordionExample">
         <div class="card">
             <div class="card-header" id="headingOne">
                 <h2 class="mb-0">
