--- a/listing/propertydetails.html
+++ b/listing/propertydetails.html
@@ -43,7 +43,7 @@
 
           <div class="sqft-input-main">
             <p class="pi-font-4">Sqft</p>
-            <input type="text" class="form-select " placeholder="Square feet">
+            <input type="text" class="form-select " placeholder="Square feet" style="background:white;">
           </div>
           <br>
 
@@ -69,12 +69,11 @@
         <div class="w-100">
           <p class="your-payout-font text-center">Enter room details</p>
           <div class="sqft-input-main">
-            <p class="pi-font-4">Sqft</p>
             <input type="text" class="form-select " placeholder="Square feet">
           </div>
 
           <div class="listin-rooms bb">
-            <p class="addpaymentmethod-font-3 mb-0">Bathrooms</p>
+            <p class="addpaymentmethod-font-3 mb-0">How many people live here?</p>
             <div class="rooms-number">
               <div><img src="../img/Minus.svg" alt=""></div>
               <p class="pi-font-6 mb-0">5</p>
@@ -83,11 +82,11 @@
           </div>
 
           <div class="listin-rooms bb">
-            <p class="addpaymentmethod-font-3 mb-0">Bathrooms</p>
+            <p class="addpaymentmethod-font-3 mb-0">Is the room furnished?</p>
             <div class="rooms-number">
-              <div><img src="../img/Close.svg" alt=""></div>
+              <div class=""><img src="../img/Close.svg" alt=""></div>
 
-              <div><img src="../img/Tick.svg" alt=""></div>
+              <div class="active"><img src="../img/Tick.svg" alt=""></div>
             </div>
           </div>
 
