--- a/searchbarmain.html
+++ b/searchbarmain.html
@@ -443,7 +443,7 @@
                                     <div class="buttons d-flex gap-2 justify-content-evenly align-items-center">
 
                                         <div class="slider-container">
-                                            <input type="range" min="1" max="12" value="1" class="input-slider-range"
+                                            <input type="range" min="1" max="12" value="1" class="input-slider-range w-100"
                                                 id="durationSlider">
                                             <div class="slider-tooltip" id="sliderTooltip">1 month</div>
                                             <div class="slider-scale">
