--- a/listings.html
+++ b/listings.html
@@ -1336,7 +1336,8 @@
 
 
 
-
+  <!-- filter module  -->
+   
   <div class="modal modal-lg fade listing-filter" id="exampleModalScrollable" tabindex="-1"
     aria-labelledby="exampleModalScrollableTitle" style="display: none;" aria-hidden="true">
     <div class="modal-dialog ">
