--- a/details.html
+++ b/details.html
@@ -32,12 +32,13 @@
         width: 100%;
       }
     }
+
   </style>
 </head>
 
 <body>
 
-  <div class="listing-map-header m-n">
+  <div class="details-header m-n">
     <header class="container">
       <a href="/" class="text-decoration-none home-crew-logo">
         <img src="img/logo.svg" alt="">
@@ -96,7 +97,7 @@
 
     <div class="container">
 
-      <div class=" mobile-version-details-heading  p-a margin-top-none mt-5 "
+      <div class="mobile-version-details-heading  p-a margin-top-none mt-5 "
         style="z-index: 100;">
         <h1 class="h3 mb-0 mobile-none details-header-font-1 ">[Listing Title]</h1>
         <a href="" class="details-mobile-icons desktop-version-none">
