--- a/searchbarmain.html
+++ b/searchbarmain.html
@@ -91,7 +91,7 @@
         .dropdown-search-input {
             outline: none;
             border: none;
-            display: none;
+            display: none !important;
         }
 
         .show .Select-a-destination p {
@@ -173,8 +173,8 @@
                 data-bs-auto-close="outside">
                 <div class="searchbar-default-text">
                     <span>Select a</span> destination
+                    <input class="dropdown-search-input " placeholder="Destination" type="text">
                 </div>
-                <input class="dropdown-search-input " placeholder="Destination" type="text">
             </a>
             <ul class="dropdown-menu Select-a-destination-dropdown" aria-labelledby="Select-a-destination"
                 id="guest-menu">
