--- a/listings.html
+++ b/listings.html
@@ -87,7 +87,7 @@
     </div>
   </div>
 
-  <div class="listing-header">
+  <div class="header-parent">
     <header class="container">
       <a href="/" class="text-decoration-none home-crew-logo">
         <img src="img/logo.svg" alt="">
