--- a/details.html
+++ b/details.html
@@ -38,11 +38,13 @@
 
 <body>
 
-  <div class="details-header m-n">
+  <div class="header-parent m-n">
     <header class="container">
       <a href="/" class="text-decoration-none home-crew-logo">
         <img src="img/logo.svg" alt="">
       </a>
+
+
       <div class="hero-search search-small m-n">
         <div id="searchbarmain"></div>
       </div>
