--- a/listings-map.html
+++ b/listings-map.html
@@ -89,7 +89,7 @@
   </div>
 
 
-  <div class="listing-map-header">
+  <div class="header-parent">
     <header class="container">
       <a href="/" class="text-decoration-none home-crew-logo">
         <img src="img/logo.svg" alt="">
